--- a/.github/workflows/main_jesumeflextestpy.yml
+++ b/.github/workflows/main_jesumeflextestpy.yml
@@ -29,14 +29,14 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-#      - name: Create and start virtual environment
-#        run: |
-#          python -m venv venv
-#          source venv/bin/activate
+      - name: Create and start virtual environment
+        run: |
+          python -m venv venv
+          source venv/bin/activate
 
 
       - name: Install dependencies
-        run: pip install --target="./.python_packages/lib/site-packages" -r ./requirements.txt
+        run: pip install r ./requirements.txt
 
       # Optional: Add step to run tests here
 
@@ -49,7 +49,7 @@ jobs:
           name: python-app
           path: |
             release.zip
-         #   !venv/
+            !venv/
 
   deploy:
     runs-on: ubuntu-latest
