--- a/.github/workflows/main_jesumeflextestpy.yml
+++ b/.github/workflows/main_jesumeflextestpy.yml
@@ -34,9 +34,8 @@ jobs:
           python -m venv venv
           source venv/bin/activate
 
-
       - name: Install dependencies
-        run: pip install r requirements.txt
+        run: pip install -r requirements.txt
 
       # Optional: Add step to run tests here
 
@@ -78,7 +77,7 @@ jobs:
         uses: Azure/functions-action@v1
         id: deploy-to-function
         with:
-          app-name: 'jesumeflextestpy'
+          app-name: 'jesumepy311sophietest'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           
