--- a/.github/workflows/main_jesumeflextestpy.yml
+++ b/.github/workflows/main_jesumeflextestpy.yml
@@ -7,57 +7,25 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # path to your web app project
   PYTHON_VERSION: '3.11'
+  FUNCTIONAPP_NAME: 'jesumeflextestpy' # your Azure Function App name
+  ZIP_PATH: 'functionapp.zip'
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     permissions:
-      contents: read # required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Python version
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: Install dependencies into .python_packages
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt --target=".python_packages/lib/site-packages"
-
-      # Optional: Add step to run tests here
-
-      - name: Zip artifact for deployment
-        run: |
-          zip -r release.zip . -x "venv/*"
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-app
-          path: |
-            release.zip
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      id-token: write # required for requesting the JWT
-      contents: read # required for actions/checkout
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: python-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -66,10 +34,14 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_567FE88E50CE45B2823DB6F3CACE52B6 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_03C7A4A070154E4BBBD3B1E205178ED2 }}
 
-      - name: Deploy to Azure Functions
-        uses: Azure/functions-action@v1
-        id: deploy-to-function
-        with:
-          app-name: 'jesumepy311sophietest'
-          slot-name: 'Production'
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+      - name: Create deployment zip package
+        run: |
+          zip -r ${{ env.ZIP_PATH }} . -x "venv/*" "**/__pycache__/*" ".git/*" ".github/*"
+
+      - name: Deploy to Azure Function App with remote build (Flex)
+        run: |
+          az functionapp deployment source config-zip \
+            --name ${{ env.FUNCTIONAPP_NAME }} \
+            --resource-group <YOUR_RESOURCE_GROUP> \
+            --src ${{ env.ZIP_PATH }} \
+            --build-remote true
