Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,6 +57,6 @@ stages:
         connectedServiceNameARM: 'JesumeWIF-v3'
         appType: 'functionAppLinux'
         isFlexConsumption: true
-        appName: '$(Parameters.AppName)'
+        appName: 'jesumeflextestpy'
 
 
