--- a/.github/workflows/main_jesumeflextestpy.yml
+++ b/.github/workflows/main_jesumeflextestpy.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
          python -m venv venv
          source venv/bin/activate
+         mkdir -p .python_packages/lib/site-packages
          pip install --target="./.python_packages/lib/site-packages" -r ./requirements.txt
 
       # Optional: Add step to run tests here
