--- a/.github/workflows/main_jesumeflextestpy.yml
+++ b/.github/workflows/main_jesumeflextestpy.yml
@@ -1,9 +1,5 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure Functions: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python project to Azure Function App - jesumeflextestpy
- 
+
 on:
   push:
     branches:
@@ -11,14 +7,14 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  PYTHON_VERSION: '3.11' # set this to the python version to use (supports 3.6, 3.7, 3.8)
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' 
+  PYTHON_VERSION: '3.11' 
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - name: Checkout repository
@@ -29,37 +25,34 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Create and start virtual environment
+      - name: Create and start virtual environment + install dependencies
         run: |
           python -m venv venv
           source venv/bin/activate
+          mkdir -p .python_packages/lib/site-packages
+          pip install --target="./.python_packages/lib/site-packages" -r requirements.txt
 
-      - name: Install dependencies
+      - name: List installed packages
         run: |
-         python -m venv venv
-         source venv/bin/activate
-         mkdir -p .python_packages/lib/site-packages
-         pip install --target="./.python_packages/lib/site-packages" -r ./requirements.txt
-
-      # Optional: Add step to run tests here
+          echo "Installed packages in .python_packages:"
+          find .python_packages
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          zip -r release.zip . -x "venv/*" ".git/*" ".github/*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: |
-            release.zip
-            !venv/
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
@@ -69,7 +62,12 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip     
-        
+
+      - name: Debug – show contents after unzip
+        run: |
+          echo "Contents after unzip:"
+          ls -R
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -77,11 +75,9 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_567FE88E50CE45B2823DB6F3CACE52B6 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_03C7A4A070154E4BBBD3B1E205178ED2 }}
 
-      - name: 'Deploy to Azure Functions'
+      - name: Deploy to Azure Functions
         uses: Azure/functions-action@v1
-        id: deploy-to-function
         with:
           app-name: 'jesumeflextestpy'
           slot-name: 'Production'
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-        
+          package: '.'
