--- a/.github/workflows/main_jesumeflextestpy.yml
+++ b/.github/workflows/main_jesumeflextestpy.yml
@@ -78,6 +78,6 @@ jobs:
       - name: Deploy to Azure Functions
         uses: Azure/functions-action@v1
         with:
-          app-name: 'jesumeflextestpy'
+          app-name: 'jesumepy311sophietest'
           slot-name: 'Production'
           package: '.'
