--- a/.github/workflows/main_jesumeflextestpy.yml
+++ b/.github/workflows/main_jesumeflextestpy.yml
@@ -7,14 +7,15 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' 
-  PYTHON_VERSION: '3.11' 
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: './release.zip' 
+  PYTHON_VERSION: '3.11'
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      id-token: write
 
     steps:
       - name: Checkout repository
@@ -25,48 +26,19 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Create and start virtual environment + install dependencies
+      - name: Create and activate virtual environment + install dependencies
         run: |
           python -m venv venv
           source venv/bin/activate
           mkdir -p .python_packages/lib/site-packages
           pip install --target="./.python_packages/lib/site-packages" -r requirements.txt
 
-      - name: List installed packages
+      - name: Show installed packages (for debug)
+        run: find .python_packages
+
+      - name: Zip code and dependencies into release.zip
         run: |
-          echo "Installed packages in .python_packages:"
-          find .python_packages
-
-      - name: Zip artifact for deployment
-        run: |
-          zip -r release.zip . -x "venv/*" ".git/*" ".github/*"
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-app
-          path: release.zip
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      id-token: write
-      contents: read
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: python-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip     
-
-      - name: Debug – show contents after unzip
-        run: |
-          echo "Contents after unzip:"
-          ls -R
+          zip -r release.zip . -x "venv/*" ".git/*" ".github/*" "release.zip"
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -78,6 +50,6 @@ jobs:
       - name: Deploy to Azure Functions
         uses: Azure/functions-action@v1
         with:
-          app-name: 'jesumepy311sophietest'
+          app-name: 'jesumeflextestpy'
           slot-name: 'Production'
-          package: '.'
+          package: './release.zip'
